# recil

./: Cargo.toml  README.md
src/: ecma335.rs  error.rs  lib.rs  pe.rs
src/ecma335/: blobs.rs  guids.rs  strings.rs  tables.rs
src/ecma335/tables/: flags.rs  index.rs  rows.rs
src/emca335/: coded_index.rs  element_type.rs  header.rs  mod.rs
src/emca335/streams/: blobs.rs  guids.rs  mod.rs  strings.rs  us.rs
src/emca335/streams/tables/: mod.rs
src/emca335/streams/tables/rows/: assembly.rs  assembly_os.rs  assembly_processor.rs  assembly_ref.rs  assembly_ref_os.rs  assembly_ref_processor.rs  class_layout.rs  constant.rs  custom_attribute.rs  decl_security.rs  event.rs  event_map.rs  exported_type.rs  field.rs  field_layout.rs  field_marshal.rs  field_rva.rs  file.rs  generic_param.rs  generic_param_constraint.rs  impl_map.rs  interface_impl.rs  manifest_resource.rs  member_ref.rs  method_def.rs  method_impl.rs  method_semantics.rs  method_spec.rs  mod.rs  module.rs  module_ref.rs  nested_class.rs  param.rs  property.rs  property_map.rs  stand_alone_sig.rs  type_def.rs  type_ref.rs  type_spec.rs
src/pe/: header.rs  mod.rs  util.rs
tests/: all.rs  assembly_ref.rs  module.rs  type_def.rs  type_ref.rs
tests/common/: mod.rs
tests/generate/: MetadataExtensions.cs  MetadataWriter.Modules.cs  MetadataWriter.TypeDef.cs  MetadataWriter.TypeRef.cs  MetadataWriter.cs  Program.cs  tools.csproj
tests/inputs/: Newtonsoft.Json.toml
