[package]
name = "recil"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
anyhow = "1.0.69"
bitflags = "1.3.2"

[dependencies.scroll]
version = "0.11.0"
features = ["derive"]

[dependencies.goblin]
version = "0.6.0"
features = ["pe32", "pe64"]
default-features = false

[dev-dependencies]
rand = "0.8.5"
toml = "0.7.2"
criterion = "0.4.0"
guid-create = "0.3.0"
